@@ -24,11 +24,10 @@ else
     CFLAGS += -O2
 endif
 
-
-#ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
-#    INSTALL_PROGRAM += -s
-#endif
-
+export NO_DOCS := no
+ifneq (,$(findstring nodocs,$(DEB_BUILD_OPTIONS)))
+         export NO_DOCS = yes
+endif
 
 # check for parallel parameter
 ifneq (,$(findstring parallel=,$(DEB_BUILD_OPTIONS)))
@@ -48,7 +47,7 @@ configure-stamp: builddir
 	dh_testdir
 
 	# Add here commands to configure the package.
-	cd $(BUILD_DIR) && qmake "QMAKE_CXXFLAGS=$(CFLAGS)" ../$(PROJECT_NAME).pro
+	cd $(BUILD_DIR) && qmake "QMAKE_CXXFLAGS=$(CFLAGS)" "NO_DOCS=$(NO_DOCS)" ../$(PROJECT_NAME).pro
 
 	touch configure-stamp
 
