@@ -7,9 +7,14 @@ for( folder, DOC_FOLDERS ) {
 
 # Documentation build target
 doctarget.target = docs
+
+contains(NO_DOCS,yes): {
+doctarget.commands = echo \"*** skipped building doxygen docs ***\"
+} else {
 doctarget.commands = INPUT=\"$${_PRO_FILE_PWD_}/system\" \
                      STRIP_FROM_PATH=\"$${_PRO_FILE_PWD_}\" \
                      doxygen $$system(pwd)/Doxyfile
+}
 
 QMAKE_EXTRA_TARGETS += doctarget
 
